# hope-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_usage.py
hope_memory/: __init__.py  cache.py  cognitive.py  pool.py
hope_memory/mcp/: __init__.py
hope_memory/shp/: __init__.py  protocol.py
